--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 <h1><a title="Peter Rabbit &#8211; 2016-2017 Animal Logic">2020 Animal Logic</a></h1>
 
                                 <div class="entry-meta group">
-                                    <a class="category_ic" >Feature Film Animation Test</a> 
+                                    <a class="category_ic" >Feature Film Animation</a> 
                                 </div>
                             </div>
                         </article>
