--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         </footer>
     </div><!-- #page -->
 
-<script src="js/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" type="text/javascript"></script>
 <script src="js/superfish.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script>
 <script src="js/jquery.fitvids.js" type="text/javascript"></script>
