--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="colors/default.css" type="text/css" id="color">  
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" type="text/css">
+    <link rel="stylesheet" href="fancybox-master/dist/jquery.fancybox.min.css" type="text/css">
     <link rel="shortcut icon" href="favicon.ico" media="screen" />
     <script src="js/modernizr.js" type="text/javascript"></script>
 </head>
@@ -545,7 +545,7 @@
         </footer>
     </div><!-- #page -->
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
