--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US" class="no-js">
 
@@ -15,7 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="colors/default.css" type="text/css" id="color">  
-    <link rel="stylesheet" href="fancybox-master/dist/jquery.fancybox.min.css" type="text/css">
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css">
     <link rel="shortcut icon" href="favicon.ico" media="screen" />
     <script src="js/modernizr.js" type="text/javascript"></script>
 </head>
@@ -546,10 +545,6 @@
     </div><!-- #page -->
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-
-<script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/superfish.js" type="text/javascript"></script>
 <script src="js/jquery.isotope.js" type="text/javascript"></script>
 <script src="js/jquery.fitvids.js" type="text/javascript"></script>
