--- a/index.html
+++ b/index.html
@@ -544,9 +544,9 @@
         </footer>
     </div><!-- #page -->
 
-<script src=""js/jquery.min.js"></script>
+<script src=""js/jquery-3.5.1.min.js"></script>
 <script src="js/superfish.js" type="text/javascript"></script>
-<script src="js/jquery.isotope.js" type="text/javascript"></script>
+<script src="js/isotope.pkgd.min.js" type="text/javascript"></script>
 <script src="js/jquery.fitvids.js" type="text/javascript"></script>
 <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
 <script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
